// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listReducer add element to list 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "list2",
    "_owner": null,
    "_type": "list",
    "description": "",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [
      Object {
        "_created": 1234,
        "book": Object {
          "pid": "pid1",
        },
        "pid": "pid1",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer add element to list twice - no duplicates allowed 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "_owner": null,
    "_type": "list",
    "description": "",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [
      Object {
        "_created": 1234,
        "book": Object {
          "pid": "pid1",
        },
        "description": "some-description-1",
        "pid": "pid1",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
      Object {
        "_created": 1234,
        "_id": 2,
        "book": Object {
          "pid": "pid2",
        },
        "pid": "pid2",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer add lists 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "_owner": null,
    "_type": "list",
    "description": "a description 1",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [],
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
  Object {
    "_created": "1234",
    "_id": "some-id-2",
    "_owner": null,
    "_type": "list",
    "description": "a description 2",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [],
    "title": "some list 2",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer get lists by type 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "_owner": null,
    "_type": "list",
    "description": "",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [],
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
  Object {
    "_created": "1234",
    "_id": "some-id-3",
    "_owner": null,
    "_type": "list",
    "description": "",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [],
    "title": "some list 3",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer get lists for owner 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "_owner": "some-owner",
    "_type": "list",
    "description": "",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [],
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
  Object {
    "_created": "1234",
    "_id": "some-id-3",
    "_owner": "some-owner",
    "_type": "list",
    "description": "",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [],
    "title": "some list 3",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer get lists for owner 2`] = `Array []`;

exports[`listReducer insert element at specific pos in list 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "_owner": null,
    "_type": "list",
    "description": "",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [
      Object {
        "_created": 1234,
        "_id": 1,
        "book": Object {
          "pid": "pid1",
        },
        "pid": "pid1",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
      Object {
        "_id": 3,
        "book": Object {
          "pid": "pid3",
        },
      },
      Object {
        "_created": 1234,
        "_id": 2,
        "book": Object {
          "pid": "pid2",
        },
        "pid": "pid2",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer remove element from list 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "_owner": null,
    "_type": "list",
    "deleted": Object {
      "123": true,
    },
    "description": "",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [
      Object {
        "_created": 1234,
        "_id": "123",
        "book": Object {
          "pid": "pid1",
        },
        "pid": "pid1",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
      Object {
        "_created": 1234,
        "_id": "456",
        "book": Object {
          "pid": "pid2",
        },
        "pid": "pid2",
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "pending": Array [
      Object {
        "_id": "123",
        "book": Object {
          "pid": "pid1",
        },
      },
    ],
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer remove list 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "_owner": null,
    "_type": "list",
    "deletingIsLoading": true,
    "description": "",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [],
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
  Object {
    "_created": "1234",
    "_id": "some-id-2",
    "_owner": null,
    "_type": "list",
    "description": "",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [],
    "title": "some list 2",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer toggle element in list 1`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "_owner": null,
    "_type": "list",
    "description": "",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [
      Object {
        "book": Object {
          "pid": "pid1",
        },
        "pid": "pid1",
      },
    ],
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer toggle element in list 2`] = `
Array [
  Object {
    "_created": "1234",
    "_id": "some-id-1",
    "_owner": null,
    "_type": "list",
    "deleted": Object {
      "undefined": true,
    },
    "description": "",
    "dotColor": "petroleum",
    "isNew": undefined,
    "list": Array [],
    "pending": Array [
      Object {
        "book": Object {
          "pid": "pid1",
        },
        "pid": "pid1",
      },
    ],
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;
